bookinfo-deployables.yaml
---
# Source: bookinfo/charts/details/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app.kubernetes.io/name: details
    helm.sh/chart: details-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: details
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/mysqldb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    app.kubernetes.io/name: mysqldb
    helm.sh/chart: mysqldb-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      name: tcp
  selector:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/productpage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app.kubernetes.io/name: productpage
    helm.sh/chart: productpage-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: productpage
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/ratings/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app.kubernetes.io/name: ratings
    helm.sh/chart: ratings-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ratings
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/reviews/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app.kubernetes.io/name: reviews
    helm.sh/chart: reviews-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: reviews
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/details/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-details-test-connection"
  labels:
    app.kubernetes.io/name: details
    helm.sh/chart: details-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo-details:9080']
  restartPolicy: Never

---
# Source: bookinfo/charts/mysqldb/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-mysqldb-test-connection"
  labels:
    app.kubernetes.io/name: mysqldb
    helm.sh/chart: mysqldb-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo-mysqldb:3306']
  restartPolicy: Never

---
# Source: bookinfo/charts/productpage/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-productpage-test-connection"
  labels:
    app.kubernetes.io/name: productpage
    helm.sh/chart: productpage-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo-productpage:9080']
  restartPolicy: Never

---
# Source: bookinfo/charts/ratings/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-ratings-test-connection"
  labels:
    app.kubernetes.io/name: ratings
    helm.sh/chart: ratings-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo-ratings:9080']
  restartPolicy: Never

---
# Source: bookinfo/charts/reviews/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-reviews-test-connection"
  labels:
    app.kubernetes.io/name: reviews
    helm.sh/chart: reviews-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo-reviews:9080']
  restartPolicy: Never

---
# Source: bookinfo/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookinfo-demo-test-connection"
  labels:
    app.kubernetes.io/name: bookinfo
    helm.sh/chart: bookinfo-1.0.8
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['bookinfo-demo:9080']
  restartPolicy: Never

---
# Source: bookinfo/charts/details/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-details
  labels:
    app.kubernetes.io/name: details
    helm.sh/chart: details-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: details
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: details
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      serviceAccountName: bookinfo-details
      containers:
        - env:
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: "probabilistic"
          - name: JAEGER_SAMPLER_PARAM
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: details
          image: "docker.io/dymaczew/examples-bookinfo-details-v1:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
          - mountPath: /opt/ibm/apm/serverconfig
            name: global-environment
          resources:
            {}
            
      volumes:
      - name: global-environment
        secret:
          defaultMode: 420
          optional: true
          secretName: icam-server-secret

---
# Source: bookinfo/charts/mysqldb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-mysqldb
  labels:
    app.kubernetes.io/name: mysqldb
    helm.sh/chart: mysqldb-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mysqldb
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysqldb
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      containers:
        - name: mysqldb
          image: "docker.io/dymaczew/examples-bookinfo-mysqldb:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3306
              protocol: TCP
          resources:
            {}
            
---
# Source: bookinfo/charts/productpage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-productpage
  labels:
    app.kubernetes.io/name: productpage
    helm.sh/chart: productpage-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: productpage
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: productpage
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
        - env:
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: "probabilistic"
          - name: JAEGER_SAMPLER_PARAM
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: productpage
          image: "docker.io/dymaczew/examples-bookinfo-productpage-v1:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
          - mountPath: /opt/ibm/apm/serverconfig
            name: global-environment
          resources:
            {}
            
      volumes:
      - name: global-environment
        secret:
          defaultMode: 420
          optional: true
          secretName: icam-server-secret

---
# Source: bookinfo/charts/ratings/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-ratings
  labels:
    app.kubernetes.io/name: ratings
    helm.sh/chart: ratings-0.1.0
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ratings
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ratings
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
        - env:
          - name: DB_TYPE
            value: mysql
          - name: MYSQL_DB_HOST
            value: mysqldb
          - name: MYSQL_DB_PORT
            value: "3306"
          - name: MYSQL_DB_USER
            value: root
          - name: MYSQL_DB_PASSWORD
            value: password
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: probabilistic
          - name: OPENTRACING_SAMPLER
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: ratings
          image: "docker.io/dymaczew/examples-bookinfo-ratings-v2:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
          - mountPath: /opt/ibm/apm/serverconfig
            name: global-environment
          resources:
            {}
            
      volumes:
      - name: global-environment
        secret:
          defaultMode: 420
          optional: true
          secretName: icam-server-secret

---
# Source: bookinfo/charts/reviews/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-reviews
  labels:
    app.kubernetes.io/name: reviews
    helm.sh/chart: reviews-0.1.1
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reviews
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reviews
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
        - env:
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: "probabilistic"
          - name: JAEGER_SAMPLER_PARAM
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: reviews
          image: "docker.io/dymaczew/examples-bookinfo-reviews-v3:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /health
              port: http
          failureThreshold: 10
          volumeMounts:
          - mountPath: /opt/ibm/apm/serverconfig
            name: global-environment
          resources:
            {}
            
      securityContext:
        runAsUser: 1001        
      volumes:
      - name: global-environment
        secret:
          defaultMode: 420
          optional: true
          secretName: icam-server-secret

---
# Source: bookinfo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookinfo-demo
  labels:
    app.kubernetes.io/name: bookinfo
    helm.sh/chart: bookinfo-1.0.8
    app.kubernetes.io/instance: bookinfo-demo
    app.kubernetes.io/managed-by: Tiller
spec:
  rules:
    - host: bookinfo.9.30.167.57.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: productpage
              servicePort: 9080

---
# Source: bookinfo/charts/details/templates/ingress.yaml


---
# Source: bookinfo/charts/mysqldb/templates/ingress.yaml


---
# Source: bookinfo/charts/productpage/templates/ingress.yaml


---
# Source: bookinfo/charts/ratings/templates/ingress.yaml


---
# Source: bookinfo/charts/reviews/templates/ingress.yaml
